Added behavior tests

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
-{%entends "base.html" %}
-{%block title %}Home Page{%endblock%}
+{% extends "base.html" %}
+{% block title %}Home Page{%endblock%}
 
-{%block content%}
-<h1>Testing source</h1>
-{%endblock%}
+{% block content %}
+<h5>Testing source</h5>
+{% endblock %}
