--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,12 @@
 {% block title %}Home Page{%endblock%}
 
 {% import 'macros.html' as macro%}
+
+{% block styles%}
+{{ super() }}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="{{url_for('static',filename='CSS/index.css')}}" type="text/css">
+{% endblock styles%}
 <!-- Content block -->
 {% block content %}
 <div class="row">
