--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -2,7 +2,7 @@
 {% import 'macros.html' as macro%}
 
 
-{% block styles %}
+{% block style %}
 {{ super() }}
 <link rel="stylesheet" href="{{url_for('static',filename='CSS/search.css')}}" type="text/css">
 {% endblock %}
