--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,11 +3,11 @@
 
 {% import 'macros.html' as macro%}
 
-{% block styles%}
+{% block style %}
 {{ super() }}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="{{url_for('static',filename='CSS/index.css')}}" type="text/css">
-{% endblock styles%}
+{% endblock %}
 <!-- Content block -->
 {% block content %}
 <div class="row">
