--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -4,7 +4,7 @@
 
 {% block style %}
 {{ super() }}
-<link rel="stylesheet" href="{{url_for('static',filename='CSS/search.css')}}" type="text/css">
+<link rel="stylesheet" href="{{url_for(filename='static/CSS/search.css')}}" type="text/css">
 {% endblock %}
 
 {% block content %}
