--- a/app/templates/articles.html
+++ b/app/templates/articles.html
@@ -9,11 +9,8 @@
 <div class="row">
   <div class="header col-md-3">
     <a href="/">
-      <h1 class="visible">Headline <br>News</h1>
-      <h1 class="not-visible">Headline News</h1>
+      <h1 class="visible">Headline News</h1>
     </a>
-    <h5>News a different Perspective</h5>
-    <br>
     <h5>Find an article</h5>
     <form class="form-group">
       <input class="form-control mr-sm-2" type="text" placeholder="Search by keyword" name="keyword_query"
@@ -26,7 +23,7 @@
       </a>
     </div>
   </div>
-  <div class="col-md-9">
+  <div class="col-md-6">
     <h3 class="text-center">TOP ARTICLES ON {{header}}</h3>
     <hr>
     <br>
