--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,10 +12,8 @@
 <div class="row">
     <div class="header col-md-3">
         <a href="/">
-            <h1 class="visible">Headline<br>News</h1><br>
+            <h1 class="visible">Headline News</h1><br>
         </a>
-        <h5>The World in a Headline</h5>
-        <br>
         <h5>Find an article</h5>
         <form class="form-group" id="myForm">
             <input class="form-control mr-sm-2" type="text" placeholder="Search by keyword" name="keyword_query"
@@ -28,7 +26,7 @@
             </a>
         </div>
     </div>
-    <div class="col-md-9">
+    <div class="col-md-6">
         <h3 class="text-center">TOP STORIES</h3>
         <hr>
         <br>
