--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,13 +26,13 @@
             </a>
         </div>
     </div>
-    <div class="col-md-6">
+    <div class="container">
         <h3 class="text-center">TOP STORIES</h3>
         <hr>
         <br>
         <div class="row">
             <div class="col-md-2"></div>
-            <div class="col-md-8">
+            <div class="col-md-6">
                 <div id="myCarousel" class="carousel slide" data-ride="carousel"> 
                     <div class="carousel-inner">
                       <div class="item active">
