--- a/app/templates/articles.html
+++ b/app/templates/articles.html
@@ -15,7 +15,7 @@
     <form class="form-group">
       <input class="form-control mr-sm-2" type="text" placeholder="Search by keyword" name="keyword_query"
         aria-label="Search" required>
-      <button class="btn btn-outline-light my-2 my-sm-0" value="Submit" type="submit">Search</button>
+      <button class="btn btn-primary my-2 my-sm-0" value="Submit" type="submit">Search</button>
     </form>
     <div class="footer text-center">
       <a href="https://newsapi.org/" target="_blank">
