--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
 <!-- Content block -->
 {% block content %}
 <div class="row">
-    <div class="header col-md-3">
+    <!-- <div class="header col-md-3">
         <a href="/">
             <h1 class="visible">Headline News</h1><br>
         </a>
@@ -25,12 +25,12 @@
                 <p>Powered by NewsAPI</p>
             </a>
         </div>
-    </div>
+    </div> -->
     <div class="container">
         <h3 class="text-center">TOP STORIES</h3>
         <hr>
         <br>
-        <div class="row">
+        <div class="container">
             <div class="col-md-2"></div>
             <div class="col-md-6">
                 <div id="myCarousel" class="carousel slide" data-ride="carousel"> 
