--- a/app/templates/articles.html
+++ b/app/templates/articles.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% import 'macros.html' as macro%}
 
-
+{% block styles %}
   <link rel="stylesheet" href="{{url_for('static',filename='CSS/articles.css')}}" type="text/css">
 
-
+{}
 {% block content%}
 <div class="row">
   <div class="header col-md-3">
