--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{%block title%}{% endblock %}</title>
 
-    
+    {% block styles %} {% endblock %}
       <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.icon') }}">
       <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Playfair+Display:wght@600&family=Roboto&display=swap" rel="stylesheet">
       <link rel="stylesheet"type="text/css" href="{{url_for('static', filename='base.css')}}">
