--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,8 +5,8 @@
 
 {% block styles %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="{{url_for('static', filename='CSS/index.css')}}" type="text/css"> -->
-    <link href="./../../static/CSS/index.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='CSS/index.css')}}" type="text/css">
+    <!-- <link href="./../../static/CSS/index.css"> -->
  {% endblock %}
    
 <!-- Content block -->
